2011-02-23  James Robinson  <jamesr@chromium.org>

        Unreviewed, rolling out r79428.
        http://trac.webkit.org/changeset/79428
        https://bugs.webkit.org/show_bug.cgi?id=54714

        Does not work in the Chromium sandbox

        * websockets/WebSocketHandshake.cpp:
        (WebCore::generateSecWebSocketKey):
        (WebCore::generateKey3):

2011-02-23  David Hyatt  <hyatt@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=46500, make positioned elements work with vertical text.
        
        Add logical accessors for the left()/right()/top()/bottom() properties on the RenderStyle.

        * rendering/style/RenderStyle.h:
        (WebCore::InheritedFlags::logicalLeft):
        (WebCore::InheritedFlags::logicalRight):
        (WebCore::InheritedFlags::logicalTop):
        (WebCore::InheritedFlags::logicalBottom):

2011-02-23  Darin Adler  <darin@apple.com>

        Reviewed by Alexey Proskuryakov.

        Fix crash seen in one of the regression tests.

        * platform/text/TextCodecUTF16.cpp:
        (WebCore::TextCodecUTF16::decode): Handle case where we did not decode any new data,
        we were not told to flush, and we had a buffered byte. The assertion here was incorrect,
        and the correct thing to do is nothing.

2011-02-23  Sergey Glazunov  <serg.glazunov@gmail.com>

        Reviewed by James Robinson.

        SVGCursorElement::removeClient() should verify that its argument is connected with
        the proper cursor element.
        https://bugs.webkit.org/show_bug.cgi?id=54979

        Test: svg/css/multiple-cursors-crash.html

        * svg/SVGCursorElement.cpp:
        (WebCore::SVGCursorElement::removeClient):

2011-02-23  Renata Hodovan  <reni@webkit.org>

        Reviewed by Darin Adler.

        FEConvolveMatrixElement changes doesn't require relayout
        https://bugs.webkit.org/show_bug.cgi?id=55067
