@@ -1,3 +1,15 @@
+2011-02-23  David Hyatt  <hyatt@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        https://bugs.webkit.org/show_bug.cgi?id=46500, make positioned elements work with vertical text.
+
+        Patch computePositionedLogicalWidth to be writing-mode-aware.  Functions it calls have not been
+        patched yet, so still not testable in a vertical text environment.
+
+        * rendering/RenderBox.cpp:
+        (WebCore::RenderBox::computePositionedLogicalWidth):
+
 2011-02-23  James Robinson  <jamesr@chromium.org>
 
         Unreviewed, rolling out r79428.
